fix(config): fix startup